--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,8 @@ stages:
   - build
   - test
   - deallocate
+  - lassen_build
+  - lassen_test
   - baseline_check
   - baseline_publish
 
@@ -79,7 +81,11 @@ stages:
 # TODO: updating tests and tpls is not necessary anymore since pipelines are
 # now using unique directories so repo are never shared with another pipeline.
 # This is not memory efficient (we keep a lot of data), hence this reminder.
-.setup:
+# Setup
+setup:
+  tags:
+    - shell
+    - quartz
   stage: setup
   variables:
     GIT_STRATEGY: none
@@ -290,3 +296,4 @@ stages:
 # The list on jobs is defined in machine-specific files.
 include:
   - local: .gitlab/quartz.yml
+  - local: .gitlab/lassen.yml
